--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -15,7 +15,9 @@
             <a id="forumtitle">Quarentine Life</a>
         </div>
         <div class="rightheader">
-            <a style="float: right"><input type="text" name="SearchBar" placeholder="Search..."></a>
+            <form action="{% url 'forum:search' %}" method="get">
+                <input style="float: right" type="text" name="q" placeholder="Search...">
+            </form>
             {% if user.is_authenticated %}
                 <a href="{% url 'forum:logout' %}"><button class="logoutbutton">LogOut</button></a>
             {% else %}
