--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -1,6 +1,8 @@
 {%  extends 'forum/index.html' %}
+{% load static %}
 
 {% block leftAside %}
+    <h3>Following topics</h3>
     {% if topic %}
         {% for topico in topic %}
             <a href="">({ topico.title }}</a>
@@ -15,7 +17,7 @@
         {% for post in page_list %}
             <article>
                 <div class="toppost">
-                    <a href=""><img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar"></a>
+                    <a href=""><img src="{% static 'forum/img/avatar6.png' %}" alt="Avatar" class="avatar"></a>
                     <a href="">{{ post.owner.username}}</a>
                     <a>{{ post.pub_date }}</a>
                 </div>
