--- a/forum/static/forum/css/main.css
+++ b/forum/static/forum/css/main.css
@@ -77,6 +77,7 @@ main{
     flex-direction: column;
     align-items: center;
     height: fit-content;
+    height: -moz-fit-content;
     box-shadow: 2px 3px rgba(0,0,0,0.1);
 }
 
@@ -121,6 +122,7 @@ main{
     background-color: white;
     border-radius: 5px;
     height: fit-content;
+    height: -moz-fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
