Added links to homepage

--- a/forum/templates/forum/post_details.html
+++ b/forum/templates/forum/post_details.html
@@ -1,5 +1,6 @@
 {%  extends 'forum/index.html' %}
-
+{% block leftAside %}
+{% endblock %}
 {% block articles %}
     {% if post %}
         <article>
