--- a/forum/templates/forum/post_details.html
+++ b/forum/templates/forum/post_details.html
@@ -1,10 +1,11 @@
 {%  extends 'forum/index.html' %}
+{% load static %}
 
 {% block articles %}
     {% if post %}
         <article>
             <div class="toppost">
-                <a href=""><img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar"></a>
+                <a href=""><img src="{% static 'forum/img/avatar6.png' %}" alt="Avatar" class="avatar"></a>
                 <a href="">{{ post.owner.username}}</a>
                 <a>{{ post.pub_date }}</a>
             </div>
