--- a/forum/templates/forum/post_details.html
+++ b/forum/templates/forum/post_details.html
@@ -1,16 +1,24 @@
 {%  extends 'forum/index.html' %}
+{% load static %}
 {% block leftAside %}
 {% endblock %}
 {% block articles %}
-    {% if post %}
         <article>
             <div class="toppost">
-                <a href=""><img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar"></a>
-                <a href="">{{ post.owner.username}}</a>
+                <a href="{% url 'forum:profile' post.owner.username %}"><img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar"></a>
+                <a href="{% url 'forum:profile' post.owner.username %}">{{ post.owner.username}}</a>
                 <a>{{ post.pub_date }}</a>
             </div>
             <div class="textpost">
                 <p class="postTitle">{{ post.title }}</p>
+                {% if post.image %}
+                    <img src="{{ post.image }}">
+                {% endif %}
+                {% if post.video %}
+                    <video>
+                        <source src="{{ image.video }}">
+                    </video>
+                {% endif %}
                 <p class="postText">{{ post.text }}</p>
             </div>
             <div class="buttonspost">
@@ -24,7 +32,4 @@
                 <p name="{{ post.id }}" class="numberPizzas">{{ post.num_likes }} Like{{ post.num_likes|pluralize }}</p>
             </div>
         </article>
-    {% else %}
-        Não há esse post :/
-    {% endif %}
 {% endblock articles %}
